Fix deployment issues
